<resources>
    <string name="app_name">project1</string>
    <string name="item_1">Item 1</string>
    <string name="item_2">Item 2</string>
    <string name="item_3">Item 3</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="vehicle_color">Vehicle Color</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="tollmate">TollMate</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="registerr">Register</string>
    <string name="email">Email</string>
    <string name="usernamer">Username</string>
    <string name="passwordr">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="vehicle_numberr">vehicle Number</string>
    <string name="vehicle_typer">vehicle type</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_toll_name">Enter Toll Name</string>
    <string name="_4_wheeler_40">4 Wheeler - ₹40</string>
    <string name="_6_wheeler_50">6 Wheeler - ₹50</string>
    <string name="_2_3_wheeler_20">2,3 Wheeler - ₹20</string>
</resources>