<?xml version="1.0" encoding="utf-8"?><RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2196F3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/splash_image"
            android:layout_width="284dp"
            android:layout_height="266dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="70dp"
            android:importantForAccessibility="no"
            android:src="@drawable/tollgatesplash" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="279dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="39dp"
            android:paddingTop="10dp"
            android:text="@string/tollmate"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="48sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="#212121" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#212121" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_margin="5dp"
            android:backgroundTint="#FFFFFF"
            android:text="@string/login"
            android:textColor="#2196F3"
            android:textSize="34sp"/>

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:text="@string/don_t_have_an_account"
            android:textColor="#212121"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_margin="4dp"
            android:backgroundTint="#FFFFFF"
            android:text="@string/registerr"
            android:textColor="#2196F3"
            android:textSize="34sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_admin_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:backgroundTint="#FFFFFF"
        android:text="Admin Login"
        android:textColor="#2196F3"
        android:textSize="16sp" />

</RelativeLayout>